--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,18 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>Harachi</title>
-
-    <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
-    <script
-      src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
-      crossorigin></script>
-      <script
-        src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
-        crossorigin></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <!-- Fastbots widget (OK to keep) -->
     <script defer src="https://app.fastbots.ai/embed.js" data-bot-id="cm7bpk9uj0erjsvk48jdp6hta"></script>
   </body>
 </html>
+
