--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,13 +7,22 @@
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>Harachi</title>
+
+    
+      <script
+        src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
+        crossorigin></script>
+        <!-- Correct React and ReactDOM versions -->
+<script crossorigin src="https://unpkg.com/react@18.2.0/umd/react.production.min.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
+
+<!-- react-bootstrap depends on correct React version -->
+<script src="https://unpkg.com/react-bootstrap@2.10.2/dist/react-bootstrap.min.js"></script>
+<script defer src="https://app.fastbots.ai/embed.js" data-bot-id="cm7bpk9uj0erjsvk48jdp6hta"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
-    <!-- Fastbots widget (OK to keep) -->
-    <script defer src="https://app.fastbots.ai/embed.js" data-bot-id="cm7bpk9uj0erjsvk48jdp6hta"></script>
   </body>
 </html>
 
